--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,9 @@ html {
 }
 
 body {
-  background-color: #000000;
+  background-image: url('https://images.unsplash.com/photo-1537884944318-390069bb8665?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+  background-repeat: no-repeat;
+  background-size: cover;
   color: #ffffff;
   font-size: 1.6rem;
   font-family: "Poppins", sans-serif;
