--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background-color: #000000;
+  background-image: linear-gradient(#000, #260642);
   color: #ffffff;
   font-size: 1.6rem;
   font-family: "Poppins", sans-serif;
@@ -50,13 +50,17 @@ body {
   font-family: "Poppins";
   font-size: 1.6rem;
   font-weight: 700;
+  border: none;
   width: 100%;
   height: 6rem;
   cursor: pointer;
+
+  transition: all 0.3s;
 }
 
 .botao:hover {
-  background-color: #e4dcdc;
+  background-color: #7026d9;
+  color: #fff;
 }
 
 .card {
